Fixed z-indexing, updating live updates on client

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -102,6 +102,7 @@ body.no-scroll {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
 }
 
 .modal {
